Add Vantagens management functionality and update employee interface